--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -11,6 +11,9 @@ jobs:
       - build-and-test
       - static-code-analysis
     steps:
+      - name: my-step
+        run: echo "Hello World!"
+    steps:
       - uses: actions/create-release@v1
         id: githubCreateRelease
         env:
