--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -15,11 +15,14 @@ jobs:
     steps:
       - name: my-step
         run: echo "Hello World!"
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - uses: actions/create-release@v1
         id: githubCreateRelease
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
           body: '${{ github.event.issue.body }}'
-          tag_name: 'testTAG'
-          release_name: 'testRELEASENAME'
+          tag_name: 'daily-preview-${{ steps.date.outputs.date }}'
+          release_name: 'daily-preview-${{ steps.date.outputs.date }}'
