--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Start new release cycle
         run: |2-
 
-                  echo "::set-env name=CURRENT_VERSION::\$(cat package.json | jq -r .version)"
+                  echo (cat package.json | jq -r .version)
+                  echo "::set-env name=CURRENT_VERSION::$(cat package.json | jq -r .version)"
                   
       - uses: actions/create-release@v1
         id: githubCreateRelease
