--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - name: my-step
         run: echo "Hello World!"
+      - uses: actions/checkout@v2
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d_%H-%M')"
