--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -24,7 +24,7 @@ jobs:
 
                   version=`cat package.json | jq -r .version`
                   echo "Current version: $version"
-                  echo "CURRENT_VERSION::${version}" >> $GITHUB_ENV
+                  echo "CURRENT_VERSION=${version}" >> $GITHUB_ENV
                   
       - uses: actions/create-release@v1
         id: githubCreateRelease
