--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
-          body: 'daily-preview-${{ steps.date.outputs.date }}'
-          tag_name: 'daily-preview-${{ steps.date.outputs.date }}'
-          release_name: 'daily-preview-${{ steps.date.outputs.date }}'
+          body: '${{ env.CURRENT_VERSION }}_PREVIEW_${{ steps.date.outputs.date }}'
+          release_name: '${{ env.CURRENT_VERSION }}_PREVIEW_${{ steps.date.outputs.date }}'
+          tag_name: '${{ env.CURRENT_VERSION }}_PREVIEW_${{ steps.date.outputs.date }}'
           prerelease: true
