--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -42,8 +42,8 @@ jobs:
           CURRENT_COMMIT_HASH: '${{ github.sha }}'
         run: |2-
               echo $hash
-              echo ${CURRENT_COMMIT_HASH}
-              if [ "$hash" = "${CURRENT_COMMIT_HASH}" ]; then
+              echo $CURRENT_COMMIT_HASH
+              if [ "$hash" = "$CURRENT_COMMIT_HASH" ]; then
                   echo "::set-output isCommitHashEqual=true"
               else
                   echo "::set-output isCommitHashEqual=false"
