--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -44,11 +44,12 @@ jobs:
               echo $PRERELEASE_COMMIT_HASH
               echo $CURRENT_COMMIT_HASH
               if [ "$PRERELEASE_COMMIT_HASH" = "$CURRENT_COMMIT_HASH" ]; then
-                  echo "::set-output isCommitHashEqual=true"
+                  echo "IS_COMMIT_EQUAL=true" >> $GITHUB_ENV
               else
-                  echo "::set-output isCommitHashEqual=false"
-              fi            
+                  echo "IS_COMMIT_EQUAL=false" >> $GITHUB_ENV
+              fi        
       - uses: actions/create-release@v1
+        if: IS_COMMIT_EQUAL == true
         id: githubCreateRelease
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
