--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -48,8 +48,8 @@ jobs:
               else
                   echo "IS_COMMIT_EQUAL='false'" >> $GITHUB_ENV
               fi        
+              echo $IS_COMMIT_EQUAL
       - uses: actions/create-release@v1
-        if: $IS_COMMIT_EQUAL == 'true'
         id: githubCreateRelease
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
