--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -53,7 +53,7 @@ jobs:
               echo $IS_COMMIT_EQUAL
       - uses: actions/create-release@v1
         id: githubCreateRelease
-        if: steps.isCommitHashEqual.outputs.isCommitHashEqual == 'false'
+        if: steps.isCommitHashEqual.outputs.isCommitHashEqual != 'true'
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
@@ -65,9 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build-and-test
-    env:
-      IS_COMMIT_EQUAL: '${{needs.build-and-test.outputs.IS_COMMIT_EQUAL}}'
-    if: ${{ env.IS_COMMIT_EQUAL }} == 'false'
+    if: ${{needs.build-and-test.outputs.IS_COMMIT_EQUAL}} != 'true'
     steps:
       - name: my-step2
         run: echo "Hello World2!"
