--- a/.github/workflows/preview-check.yml
+++ b/.github/workflows/preview-check.yml
@@ -4,7 +4,7 @@
     workflow_dispatch: {}
 name: Preview Check
 jobs:
-  build-and-test:
+  check-for-changes:
     runs-on: ubuntu-latest
     outputs:
       IS_COMMIT_EQUAL: '${{steps.isCommitHashEqual.outputs.isCommitHashEqual}}'
@@ -48,5 +48,5 @@ jobs:
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ secrets.PAC }}" \
-                https://api.github.com/repos/chr7s/sandbox9/actions/workflows/preview.yml/dispatches \
+                https://api.github.com/repos/${{ github.repository }}/actions/workflows/preview.yml/dispatches \
                 -d '{"ref":"master"}'
