--- a/.github/workflows/preview-check.yml
+++ b/.github/workflows/preview-check.yml
@@ -11,9 +11,6 @@ jobs:
       - name: my-step
         run: echo "Hello World!"
       - uses: actions/checkout@v2
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d_%H-%M')"
       - name: Get latest prerelease
         id: latestPrereleaseHash
         run: |2-
@@ -24,21 +21,8 @@ jobs:
               commitHash=`git show-ref ${tagname} | awk '{print $1}'`
               echo $commitHash
               echo "PRERELEASE_COMMIT_HASH=$commitHash" >> $GITHUB_ENV 
-      - name: Compare commit hashes
-        id: isCommitHashEqual
-        env:
-          CURRENT_COMMIT_HASH: '${{ github.sha }}'
-        run: |2-
-              echo $PRERELEASE_COMMIT_HASH
-              echo $CURRENT_COMMIT_HASH
-              if [ "$PRERELEASE_COMMIT_HASH" = "$CURRENT_COMMIT_HASH" ]; then
-                  echo "::set-output name=isCommitHashEqual::true"
-              else
-                  echo "::set-output name=isCommitHashEqual::false"
-              fi
-              echo $IS_COMMIT_EQUAL
       - name: Trigger Preview Workflow
-        if: steps.isCommitHashEqual.outputs.isCommitHashEqual != 'true'
+        if: github.sha != steps.latestPrereleaseHash.outputs.latestPrereleaseHash
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         run: |2-
